tests/snapshots/examples_fixtures/type_system__failing__38_top_level_effect_rejected.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/38_top_level_effect_rejected.flx
== compile ==
failed (compile)
== diagnostics ==
error[E413]: Top-Level Effect

Effectful operation is not allowed at top level (requires: IO).

  examples/type_system/failing/38_top_level_effect_rejected.flx:3:1
  |
3 | print("top-level effect")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


error[E414]: Missing Main Function

Effectful program is missing `fn main` root effect handler.

  examples/type_system/failing/38_top_level_effect_rejected.flx:3:1
  |
3 | print("top-level effect")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


error[E400]: Missing Effect

requires effect `Console` but the enclosing context does not provide it

  examples/type_system/failing/38_top_level_effect_rejected.flx:3:1
  |
3 | print("top-level effect")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  | ------------------------- requires `Console`

Hint:
  annotate the enclosing function with `with Console`

Found 3 errors.
== stdout ==
<not executed>
